--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>	
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.silverpeas</groupId>
   <artifactId>assembly-configuration</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>Gestion du packaging de la configuration</name>
   <url>http://www.silverpeas.com</url>
   
@@ -22,4 +21,18 @@
       <url>http://repository.silverpeas.org/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
+
+  <licenses>
+    <license>
+      <name>GNU Affero General Public License with FLOSS Exception</name>
+      <distribution>repo</distribution>
+      <url>http://repository.silverpeas.org/legal/gnu_affero.html</url>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/tags/assembly-configuration-1.0</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/tags/assembly-configuration-1.0</developerConnection>
+    <url>https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/tags/assembly-configuration-1.0</url>
+  </scm>
 </project>
