--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.silverpeas</groupId>
   <artifactId>assembly-configuration</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <name>Gestion du packaging de la configuration</name>
   <url>http://www.silverpeas.com</url>
   
@@ -31,8 +31,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/trunk</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/trunk</developerConnection>
-    <url>https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/trunk/</url>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/tags/assembly-configuration-2.0</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/tags/assembly-configuration-2.0</developerConnection>
+    <url>https://repository.silverpeas.org/svn/silverpeas/assembly-configuration/tags/assembly-configuration-2.0</url>
   </scm>
 </project>
