--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.silverpeas</groupId>
   <artifactId>assembly-configuration</artifactId>
-  <version>2.1</version>
+  <version>2.2-SNAPSHOT</version>
   <name>Gestion du packaging de la configuration</name>
   <url>http://www.silverpeas.com</url>
   
@@ -34,6 +34,6 @@
     <connection>scm:git:git@github.com:Silverpeas/Silverpeas-Assembly-Configuration.git</connection>
     <developerConnection>scm:git:git@github.com:Silverpeas/Silverpeas-Assembly-Configuration.git</developerConnection>
     <url>https://github.com/Silverpeas/Silverpeas-Assembly-Configuration</url>
-    <tag>assembly-configuration-2.1</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
