change the groupId from com.silverpeas to org.silverpeas

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>	
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.silverpeas</groupId>
-  <artifactId>assembly-configuration</artifactId>
+  <groupId>org.silverpeas</groupId>
+  <artifactId>configuration-assembly</artifactId>
   <version>2.3-SNAPSHOT</version>
-  <name>Gestion du packaging de la configuration</name>
-  <url>http://www.silverpeas.com</url>
+  <name>Silverpeas Configuration Assembly</name>
+  <url>http://www.silverpeas.org</url>
+  <description>
+    It assembles the entire Silverpeas configuration split between Silverpeas Core and between Silverpeas components.
+  </description>
   
   <distributionManagement>
     <repository>
